# pdaggerq

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  __init__.py  ahat.cc  ahat.h  ahat_helper.cc  ahat_helper.h  data.h  do-configure  plugin.cc  pq.cc  pq.h  pq_helper.cc  pq_helper.h  pymodule.py  pyproject.toml  sample.py  setup.py
.github/workflows/: ci.yml
docs/: doc.rst
examples/: active_space_CCSDt.py  cc3.py  ccsd.py  ccsd_codegen.py  ccsd_codegen_with_spin.py  ccsd_d1.py  ccsd_d2.py  ccsd_doubles.py  ccsd_energy.py  ccsd_singles.py  ccsd_t.py  ccsd_with_spin.py  ccsdt.py  ccsdt_with_spin.py  ccsdtq.py  ccsdtq_quadruples.py  ccsdtq_with_spin.py  ci_coefficients.py  cid_d1.py  cid_d2.py  cisd_hamiltonian.py  dea_eom_ccsd.py  dea_eom_ccsd_hamiltonian.py  dip_3h1p_active_space_0h0p_chronusq.py  dip_3h1p_ccsd_chronusq.py  dip_eom_ccsd.py  ea_eom_ccsd.py  ea_eom_ccsdt.py  eom_ccsd.py  eom_ccsd_codegen_with_spin.py  eom_ccsd_d1.py  eom_ccsd_d1_by_hand.py  eom_ccsd_hamiltonian.py  eom_ccsd_sigma.py  eom_qed_ccsd_21.py  eom_qed_ccsd_21_1rdm.py  eom_qed_ccsd_21_2rdm.py  extended_rpa.py  extract_spins.py  ip_eom_ccsd.py  (+23 more)
examples/full_cc_codes/: cc3.py  ccsd.py  ccsd_network.py  ccsd_t.py  ccsdt.py  ccsdtq.py  cisd.py  diis.py  eom_ccsd.py  lambda_ccsd.py
examples/psi4_interface/: cc_driver.py  cc_example.py  cc_example_open-shell.py  cc_tools.py  ccsd.py  ccsdt.py  ccsdtq.py  ccsdtq_with_spin.py  dea_eom_ccsd.py  eom_ccsd.py  helper_cqed_rhf.py  quccsd.py  ucc3.py  ucc4.py  ucc_example.py
examples/psi4_interface/pccd/: cc_driver.py  pccd.py  spatial_to_spin_orbital.py
examples/reference_outputs/: ccsd_codegen.ref  ccsd_d2.ref  ccsd_energy.ref  ccsd_singles.ref  ccsd_t.ref  ccsd_with_spin.ref  ccsdt.ref  cid_d2.ref  ea_eom_ccsdt.ref  eom_ccsd_d1.ref  eom_ccsd_hamiltonian.ref  eom_ccsd_sigma.ref  extended_rpa.ref  ip_eom_ccsdt.ref  lambda_energy.ref
numerical_tests/: numerical_tests.py  pq_test.py  pytest.ini
numerical_tests/test_cases/: ccsd_codegen.py  ccsd_spin_orbital_codegen.py  ccsdt_codegen.py  eomccsd_codegen.py
pdaggerq/: __init__.py  algebra.py  algebra_test.py  amplitudes.cc  amplitudes.h  blocking_leak_test.py  chronus.py  config.py  data.cc  data.h  einsums.py  einsums_test.py  latex.py  models.py  models_test.py  parser.py  parser_test.py  pq.cc  pq.h  pq_add_label_ranges.cc  pq_add_label_ranges.h  pq_add_spin_labels.cc  pq_add_spin_labels.h  pq_bernoulli.cc  pq_bernoulli.h  pq_cumulant_expansion.cc  pq_cumulant_expansion.h  pq_extras.cc  pq_extras.h  pq_helper.cc  pq_helper.h  pq_serialize.cc  pq_string.cc  pq_string.h  pq_swap_operators.cc  pq_swap_operators.h  pq_tensor.cc  pq_tensor.h  pq_utils.cc  pq_utils.h  (+4 more)
pdaggerq/numerical_utils/: autogen.py  cc.py  cc_hbar.py  diis.py  eom_cc.py  integrals.py
pdaggerq/ta_builder/include/: equation.h  line.hpp  linkage.h  tabuilder.h  term.h  vertex.h
pdaggerq/ta_builder/include/collections/: linkage_set.hpp  scaling_map.hpp
pdaggerq/ta_builder/src/: consolidate.cc  equation.cc  linkage.cc  tabuilder.cc  term.cc  term_perm_helper.cc  timer.cc  vertex.cc
pq_graph/: README.md  tmp2viz.xcf
pq_graph/examples/: ccsd.py  ccsdt.py  ea_eom_ccsd.py  eom_ccsd.py  eom_ea_ccsd.py  eom_ea_qed_ccsd.py  eom_ee_ccsd_1rdm.py  eom_ee_qed_ccsd_21_1rdm.py  eom_qed_ccsd_21.py  eom_qed_ccsd_21_1rdm.py  eom_qed_ccsd_21_2rdm.py  extract_spins.py  qed_1rdm.py  qed_2rdm.py  qed_ccsd.py  qed_ccsd_21.py  qed_ccsd_22.py  qed_eom_ccsd.py
pq_graph/examples/full_cc_codes/: ccsd.py  ccsdt.py  eom_ea_ccsd.py
pq_graph/include/: code_printer.h  composer.h  einsum_printer.h  equation.h  line.hpp  linkage.h  linkage_set.hpp  pq_graph.h  scaling_map.hpp  shape.hpp  tamm_printer.h  term.h  timer.h  vertex.h
pq_graph/include/collections/: linkage_set.hpp  scaling_map.hpp
pq_graph/include/printers/: blas_printer.h  code_printer.h  einsum_printer.h  loop_printer.h  tamm_printer.h  tiledarray_printer.h
pq_graph/src/: code_printer.cc  composer.cc  consolidate.cc  dot_generator.cc  einsum_printer.cc  equation.cc  fusion.cc  graph_printing.cc  linkage.cc  linkage_ops.cc  pq_graph.cc  printing.cc  substitute.cc  tamm_printer.cc  term.cc  term_perm_helper.cc  term_substitute.cc  timer.cc  vertex.cc  vertex_printing.cc
pq_graph/src/printers/: blas_printer.cc  code_printer.cc  einsum_printer.cc  loop_printer.cc  tamm_printer.cc  tiledarray_printer.cc
pq_graph/tests/: cc3_code.ref  cc3_codegen.py  ccsd_code.ref  ccsd_codegen.py  ccsd_with_spin_code.ref  ccsd_with_spin_codegen.py  ccsdt_code.ref  ccsdt_codegen.py  ccsdt_with_spin_code.ref  ccsdt_with_spin_codegen.py  cisd_code.ref  cisd_codegen.py  eom_ccsd_code.ref  eom_ccsd_codegen.py  eom_ccsd_quick_code.ref  eom_ccsd_quick_codegen.py  extract_spins.py  ir_export_test.py  lambda_ccsd_code.ref  lambda_ccsd_codegen.py  neo_ccsd_test.py  neo_df_test.py  neo_lambda_rdm_test.py  neo_numerical_test.py  neo_rdm_energy_test.py  neo_spin_codegen.py  neo_spin_traced.ref  neo_spin_tracing_test.py
samples/: ccd_d1.py  ccsd.py  ccsd_d1.py  ccsd_doubles.py  ccsd_energy.py  ccsd_singles.py  ccsdt.py  cid_d1.py  cid_d2.py  eom_ccsd_d1.py  eom_ccsd_d1_by_hand.py  lambda_doubles.py  lambda_singles.py
test/: graph_test.py  numerical_test.py  pq_test.py  test_pq.py
test/reference_outputs/: active_space_CCSDt.ref  ccsd_d1.ref  ccsd_doubles.ref  ccsdt_with_spin.ref  cid_d2.ref  cisd_hamiltonian.ref  eom_ccsd_d1_by_hand.ref  eom_ccsd_sigma.ref  eom_qed_ccsd_21.ref  eom_qed_ccsd_21_1rdm.ref  eom_qed_ccsd_21_2rdm.ref  extended_rpa.ref  ip_eom_ccsd.ref  lambda_doubles_codegen.ref  lambda_singles.ref  lambda_singles_codegen.ref  qed_1rdm.ref  qed_2rdm.ref  qed_ccsd.ref  qed_ccsd_21.ref  qed_ccsd_22.ref  qed_eom_ccsd.ref  rdm_mappings.ref  ucc3.ref  ucc3_codegen.ref  ucc4.ref  ucc4_codegen.ref
tests/: legacy_numerical_test.py  numerical_tests.py  requirements.txt
tests/reference_outputs/: cc3.ref  ccsd.ref  ccsd_d2.ref  cid_d1.ref  ea_eom_ccsd.ref  ea_eom_ccsdt.ref  eom_ccsd.ref  eom_qed_ccsd_21_1rdm.ref  extended_rpa.ref  ip_eom_ccsdt.ref  lambda_doubles.ref  rdm_mappings.ref
